# ROSbot

./: README.md
custom_bot/: CMakeLists.txt  package.xml
custom_bot/launch/: complete.launch.py  display.launch.py  gazebo.launch.py  world.launch.py
custom_bot/src/: diff_drive_controller.cpp  diff_plugin.cpp  new_plugin.cpp
custom_bot/urdf/: robot.urdf  robot.xacro
custom_bot/worlds/: empty_world.sdf  sample.sdf  simple_world.sdf  warehouse.sdf  warehouse_world.sdf
waypoint/: package.xml  setup.cfg  setup.py
waypoint/waypoint/: waypoint_navigation.py
